<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_image"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_description" />

    <!-- Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="@android:color/transparent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/Username"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@android:color/white"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/Password"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:color/white"
            android:padding="10dp"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/ConfirmPassword"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:color/white"
            android:padding="10dp"
            android:layout_marginBottom="40dp"/>


        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/button_signup"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:backgroundTint="@color/light_yellow" />

    </LinearLayout>
</RelativeLayout>