<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="#F5F5F5"-->
<!--    tools:context=".SearchActivity">-->

<!--    &lt;!&ndash; Search by Keyword &ndash;&gt;-->
<!--    <TextView-->
<!--        android:id="@+id/keywordLabel"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="@string/keyword_label"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/searchKeywordEditText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Search Keyword"-->
<!--        android:inputType="text"-->
<!--        android:padding="16dp"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/keywordLabel" />-->


<!--    <TextView-->
<!--        android:id="@+id/dateFromLabel"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/from_label"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/searchKeywordEditText"-->
<!--        android:layout_marginTop="16dp" />-->

<!--    <Button-->
<!--        android:id="@+id/dateFromButton"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/select_date_button"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/dateFromLabel" />-->

<!--    <TextView-->
<!--        android:id="@+id/dateToLabel"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/to_label"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/dateFromButton"-->
<!--        android:layout_marginTop="16dp" />-->

<!--    <Button-->
<!--        android:id="@+id/dateToButton"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/select_date_button"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/dateToLabel" />-->

<!--    <TextView-->
<!--        android:id="@+id/emotionLabel"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/emotion_label"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/dateToButton"-->
<!--        android:layout_marginTop="16dp" />-->

<!--    <Spinner-->
<!--        android:id="@+id/emotionSpinner"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/emotionLabel" />-->

<!--    <Button-->
<!--        android:id="@+id/searchButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/search_button"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/emotionSpinner" />-->

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/recyclerViewSearchResults"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/searchButton"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:layout_marginTop="16dp" />-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".SearchActivity">

    <!-- Search by Keyword -->
    <TextView
        android:id="@+id/keywordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/keyword_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchKeywordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Search Keyword"
        android:inputType="text"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keywordLabel" />

    <!-- Date From -->
    <TextView
        android:id="@+id/dateFromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchKeywordEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/dateFromEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="YYYY-MM-DD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateFromLabel" />

    <!-- Date To -->
    <TextView
        android:id="@+id/dateToLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateFromEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/dateToEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="YYYY-MM-DD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateToLabel" />

    <!-- Emotion Selection -->
    <TextView
        android:id="@+id/emotionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emotion_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateToEditText"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/emotionSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emotionLabel" />

    <!-- Search Button -->
    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emotionSpinner" />

    <!-- Back to Home Button -->
    <Button
        android:id="@+id/backToHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to Home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchButton"
        android:layout_marginTop="16dp" />

    <!-- RecyclerView for search results -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSearchResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/backToHomeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


